templates/canton-participant_template.yaml
---
# Source: canton-participant/templates/networkpolicy/from-all-to-ledger-api-metrics.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-canton-participant-allow-ledger-api-metrics
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: canton-participant
    app.kubernetes.io/part-of: canton
    app.kubernetes.io/version: 2.8.1
    canton.io/participant: participant1
    helm.sh/chart: canton-participant-0.6.1
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: participant
      canton.io/participant: participant1
  policyTypes:
  - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 4001
---
# Source: canton-participant/templates/networkpolicy/from-same-namespace-to-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-canton-participant-allow-same-namespace
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: canton-participant
    app.kubernetes.io/part-of: canton
    app.kubernetes.io/version: 2.8.1
    canton.io/participant: participant1
    helm.sh/chart: canton-participant-0.6.1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
---
# Source: canton-participant/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-canton-participant
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: canton-participant
    app.kubernetes.io/part-of: canton
    app.kubernetes.io/version: 2.8.1
    canton.io/participant: participant1
    helm.sh/chart: canton-participant-0.6.1
    app.kubernetes.io/component: participant
spec:
  type: ClusterIP
  ports:
    - name: public
      protocol: TCP
      port: 4001
      targetPort: public
    - name: admin
      protocol: TCP
      port: 4002
      targetPort: admin
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: canton-participant
    app.kubernetes.io/component: participant
---
# Source: canton-participant/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-canton-participant
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: canton-participant
    app.kubernetes.io/part-of: canton
    app.kubernetes.io/version: 2.8.1
    canton.io/participant: participant1
    helm.sh/chart: canton-participant-0.6.1
    app.kubernetes.io/component: participant
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: canton-participant
      app.kubernetes.io/component: participant
  strategy:
    type: "Recreate"
  template:
    metadata:
      annotations:
        "checksum/config": "8a8ad8338f4dd26f1faaa05bdf58c0a2f9879e2e4523f407a657ffcf8eb07633"
        "checksum/env": "d7891c809f1184fcc63bce85af08219adb2cae5b1b13fc1b6418c0a2e30508a0"
        "checksum/secret": "01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b"
      labels:
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: canton-participant
        app.kubernetes.io/part-of: canton
        app.kubernetes.io/version: 2.8.1
        canton.io/participant: participant1
        helm.sh/chart: canton-participant-0.6.1
        app.kubernetes.io/component: participant
    spec:
      serviceAccountName: release-name-canton-participant
      securityContext:
        fsGroup: 65532
        fsGroupChangePolicy: Always
        sysctls: []
      containers:
        - name: canton
          image: "digitalasset-docker.jfrog.io/canton-enterprise:2.8.1"
          imagePullPolicy: "IfNotPresent"
          securityContext:
            readOnlyRootFilesystem: false
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
          args:
            - "daemon"
            - "--log-encoder=plain"
            - "--log-profile=container"
            - "--log-level-root=INFO"
            - "--log-level-canton=INFO"
            - "--log-level-stdout=INFO"
            - "--config=/etc/canton/participant.conf"
            - "--bootstrap=/etc/canton/participant.canton"
          ports:
            - name: public
              containerPort: 4001
            - name: admin
              containerPort: 4002
          resources:
            limits:
              cpu: 2
              memory: 3Gi
            requests:
              cpu: 500m
          livenessProbe:
            grpc:
              port: 4003
              service: "liveness"
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 3
          readinessProbe:
            grpc:
              port: 4003
              service: ""
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 1
            timeoutSeconds: 3
          volumeMounts:
            - name: config
              mountPath: /etc/canton
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: release-name-canton-participant
